@@ -1072,7 +1072,7 @@ main(int argc, char **argv)
 
 	hbox = gtk_hbutton_box_new();
 	gtk_button_box_set_layout(GTK_BUTTON_BOX(hbox), GTK_BUTTONBOX_END);
-	gtk_container_border_width(GTK_CONTAINER(hbox), 5);
+	gtk_container_set_border_width(GTK_CONTAINER(hbox), 5);
 	gtk_widget_show(hbox);
 	gtk_box_pack_start(GTK_BOX(vbox), hbox, FALSE, TRUE, 0);
 
@@ -1098,7 +1098,7 @@ main(int argc, char **argv)
 
 	hbox = gtk_hbutton_box_new();
 	gtk_button_box_set_layout(GTK_BUTTON_BOX(hbox), GTK_BUTTONBOX_END);
-	gtk_container_border_width(GTK_CONTAINER(hbox), 5);
+	gtk_container_set_border_width(GTK_CONTAINER(hbox), 5);
 	gtk_widget_show(hbox);
 	gtk_box_pack_end(GTK_BOX(vbox), hbox, FALSE, TRUE, 0);
 
